- Newtonsoft.Json NuGet package updated from 8.0.2 to 8.0.3.
- Font Awesome NuGet package updated from 4.2.0 to 4.5.0.
MVC 6
- jQuery updated NuGet Bower updated from 2.2.2 to 2.2.3. ContentDeliveryNetwork.cs and bower.json updated.
- Font Awesome NuGet Bower updated from 4.6.1 to 4.6.3. ContentDeliveryNetwork.cs and bower.json updated.
- jQuery.validate.unobtrusive Bower package updated from 3.2.5 to 3.2.6. ContentDeliveryNetwork.cs and bower.json updated.
- sinon Bower package updated from 1.17.3 to 1.17.4. ContentDeliveryNetwork.cs and bower.json updated.
- Updated several NPM packages in package.json.

Version 2.17.0
- Extension now installs for a single user, rather than all users. This enables it to auto-update.
MVC 6
- RC2 ASPNET_ENVIRONMENT is now renamed to ASPNETCORE_ENVIRONMENT in gulpfile.js and Startup.cs.
- AddUserSecrets for configuration only done in Development for security in Startup.Configuration.cs.
- Changed comments for how to add/remove environment variables in Startup.Configuration.cs.

Version 2.16.0
MVC 6
- Added HttpRequestExtensions IsLocalRequest extension method.
- Modified launchSettings.json so that the site starts on the same port when started from Kestrel or IIS Express.

Version 2.15.0
MVC 6
- Boilerplate.Web.Mvc6 Updated:
	- Performance improvements.
	- Added ICommand and IAsyncCommand interfaces to help implement controller actions as separate classes.
	- Refactored the DistributedCacheExtensions.
	- Added ValidateModelStateAttribute to automatically validate ModelState.
- Boilerplate.Web.Mvc6.TagHelpers Updated:
	- Performance improvements.
- Fixed Missing jshint and jslint (See https://github.com/RehanSaeed/ASP.NET-MVC-Boilerplate/issues/89).
- Updated JSON.NET reference.
- Updated font-awesome to 4.6.1.
- Updated jQuery to 2.2.2.
- Updated jQuery validate to 1.15.0.
- Updated jQuery validate npm package to 3.2.5.
- Updated gulp to 2.9.1.
- Updated gulp-csslint to 0.3.0.
- Updated gulp-cssnano to 2.1.1.