@@ -2,6 +2,9 @@
   "name": "asp.net-mvc-boilerplate",
   "private": true,
   "dependencies": {
+    // $Start-ApplicationInsights$
+    "ApplicationInsights-JS": "0.22.9",
+    // $End-ApplicationInsights$
     "bootstrap-sass": "3.3.6",
     "font-awesome": "4.6.3",
     "jquery": "2.2.3",
