@@ -9,9 +9,12 @@ MVC 5
 MVC 6
 - jQuery updated NuGet Bower updated from 2.2.2 to 2.2.3. ContentDeliveryNetwork.cs and bower.json updated.
 - Font Awesome NuGet Bower updated from 4.6.1 to 4.6.3. ContentDeliveryNetwork.cs and bower.json updated.
-- jQuery.validate.unobtrusive Bower package updated from 3.2.5 to 3.2.6. ContentDeliveryNetwork.cs and bower.json updated.
+- jQuery.validate.unobtrusive Bower package updated from 3.2.5 to 3.2.6. ContentDeliveryNetwork.cs and bower.json
+updated.
 - sinon Bower package updated from 1.17.3 to 1.17.4. ContentDeliveryNetwork.cs and bower.json updated.
 - Updated several NPM packages in package.json.
+- applicationinsights-js added to bower.json and application-insights.js removed from scripts. gulpfile.js changed to
+use the source of the application insights js file.
 
 Version 2.17.0
 - Extension now installs for a single user, rather than all users. This enables it to auto-update.
